[package]
name = "monaco_protocol"
version = "0.12.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "monaco_protocol"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
stable = []
dev = []

[dependencies]
solana-program = "= 1.17.2"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-token = "4.0.0"
rust_decimal = "1.32.0"
test-case = "3.2.1"
protocol_product = { git = "https://github.com/BetDexLabs/protocol-product", rev = "aa95db781e06774783b8bcf8f914ebe67c0d77ac", features = ["no-entrypoint"] }
